# serializer version: 1
# name: test_next_states_to_evaluate_no_teammates_in_walking_distance
  list([
    array([0., 0., 0.]),
    array([0.5, 0. , 0. ]),
    array([0.35355339, 0.35355339, 0.        ]),
    array([3.061617e-17, 5.000000e-01, 0.000000e+00]),
    array([-0.35355339,  0.35355339,  0.        ]),
    array([-5.000000e-01,  6.123234e-17,  0.000000e+00]),
    array([-0.35355339, -0.35355339,  0.        ]),
    array([ 3.061617e-17, -5.000000e-01,  0.000000e+00]),
    array([ 0.35355339, -0.35355339,  0.        ]),
  ])
# ---
# name: test_next_states_to_evaluate_teammates_in_walking_distance
  list([
    array([-0.35355339, -0.35355339,  0.        ]),
    array([ 3.061617e-17, -5.000000e-01,  0.000000e+00]),
    array([ 0.35355339, -0.35355339,  0.        ]),
  ])
# ---
